# per_dif_priv_fed_embed

./: README.md  environment.yml  main.py  pyproject.toml  setup.py
common/: config.py
dataset/: create_data_loaders.py
differential_privacy/: get_private_model.py
differential_privacy/privacy_optimizers/: random_grad_dp_optimizer.py
models/: conv_net.py  mlp_net.py
per_dif_priv_fed_embed/common/: config.py
per_dif_priv_fed_embed/dataset/: create_data_loaders.py
per_dif_priv_fed_embed/differential_privacy/: get_private_model.py
per_dif_priv_fed_embed/differential_privacy/privacy_engines/: custom_privacy_engine.py
per_dif_priv_fed_embed/models/: conv_net_with_centroids.py
per_dif_priv_fed_embed/train/: utils.py
train/: utils.py
