[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "per_dif_priv_fed_embed"
version = "0.0.1"
authors = [
  { name="Moshe Beutel", email="moshebeutel@gmail.com" },
]
description = "A differential privacy federated learning library of the cifar dataset"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/moshebeutel/per_dif_priv_fed_embed"
"Bug Tracker" = "https://github.com/moshebeutel/per_dif_priv_fed_embed/issues"
